white space fixed for links in buddylist

--- a/themes/pbpoker/pbpoker.css
+++ b/themes/pbpoker/pbpoker.css
@@ -893,6 +893,7 @@ div#buddylist .buddy_list_placeholder .body a
 .buddy_list_links a
 {
 	font-weight: bold;
+	white-space: nowrap;
 }
 
 #buddylist #today_gift {
